# hello-rust-web-dev

./: README.md
backend/: .env  Cargo.toml  TESTING.md  TEST_SUMMARY.md  diesel.toml  run_endpoint_tests.sh
backend/migrations/2025-09-05-084211_create_products/: up.sql
backend/migrations/2025-09-05-110327_added_product_variants/: down.sql  up.sql
backend/migrations/2025-09-05-132535_added_indexes/: down.sql  up.sql
backend/migrations/2025-09-05-165402_fix_primary_keys/: down.sql  up.sql
backend/migrations/2025-09-05-171945_convert_to_uuids/: up.sql
backend/src/: lib.rs  main.rs  prelude.rs  schema.rs
backend/src/config/: database.rs  mod.rs  settings.rs
backend/src/controllers/: products.rs
backend/src/core/: mod.rs  tracing.rs
backend/src/middleware/: cors.rs  error_logging.rs  logging.rs  mod.rs
backend/src/models/: mod.rs  products.rs  utils.rs  variants.rs
backend/src/services/: products.rs
backend/src/traits/: mod.rs  responses.rs
backend/tests/: endpoint_tests.rs  mod.rs  product_tests.rs  service_tests.rs
scripts/: start_dev_db.sh  test_products_api.sh
