[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.99"
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "uuid"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde-env = "0.2.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi", "chrono"] }
tracing-actix-web = "0.7"
tracing-log = "0.2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
actix-cors = "0.7.1"

[dev-dependencies]
actix-rt = "2.0"
actix-web = "4.11.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
